Second part of the exercise (evo-a-amazon)

--- a/exercise1/Base.lproj/Main.storyboard
+++ b/exercise1/Base.lproj/Main.storyboard
@@ -50,6 +50,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MYh-2e-wyJ">
                                         <rect key="frame" x="180" y="0.0" width="30" height="30"/>
                                         <state key="normal" title="Link"/>
+                                        <connections>
+                                            <action selector="openNavigator:" destination="BYZ-38-t0r" eventType="touchUpInside" id="icW-Lp-l9q"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CDo-of-rtS">
                                         <rect key="frame" x="240" y="0.0" width="30" height="30"/>
